# train_notifier

./: .flake8  .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  entrypoint.sh  env_example  pyproject.toml  requirements.txt
bot/: requirements.txt
bot/src/: config.py
shell_scripts/: entrypoint.sh  start_celery_worker.sh  start_python_app.sh  start_taskiq_worker.sh
src/: bootstrap.py  celery_signals.py  config.py  db.py  documents.py  loader.py  main.py  mongodb.py  mycelery.py
src/common/: broker.py  celery.py  config.py  db.py  exceptions.py  loader.py  logging.py  middlewares.py  parser_factory.py  routers.py  types.py  utils.py
src/common/services/: mongodb.py  playwright.py  selenium.py
src/migrations/: env.py
src/migrations/versions/: 2024_11_17_1431-b675926c7f3f_initial.py  2024_11_22_0906-51868e6d8e34_new_changes.py  2024_11_24_1348-28cfbec4758d_.py
src/routers/: commands.py
src/routes/: exceptions.py  models.py  parser_factory.py  routers.py  tasks.py  types.py
src/routes/services/: playwright.py  sqlalchemy.py
src/schedule/: tasks.py
src/schedule/services/: celery.py
src/scheduler/: routers.py  tasks.py
src/services/: mongodb.py  selenium.py
src/tasks/: selenium.py
src/tickets/: exceptions.py  models.py  parser_factory.py  routers.py  tasks.py  types.py  utils.py
src/tickets/services/: playwright.py  selenium.py  sqlalchemy.py
src/trains/: documents.py  exceptions.py  models.py  parser_factory.py  routers.py  schemas.py  tasks.py  types.py  utils.py
src/trains/services/: mongo.py  mongodb.py  playwright.py  selenium.py  sqlalchemy.py
src/utils/: celery.py  config.py  db.py  loader.py
src/waiting/: tasks.py
train_parser_api/: requirements.txt
train_parser_api/src/: config.py  main.py
