[tool.poetry]
name = "train-notifier"
version = "0.1.0"
description = ""
authors = ["Sinyushkin Timofey <y.timko56@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.6.1"
celery = {extras = ["redis"], version = "^5.4.0"}
motor = "^3.6.0"
aiogram = "^3.14.0"
playwright = "^1.48.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
